--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "mongoose": "^8.0.0",
+    "@supabase/supabase-js": "^2.86.2",
     "cloudinary": "^1.41.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.0.0",
+    "pg": "^8.16.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8.0.1"
+    "postcss": "^8.0.1",
+    "tailwindcss": "^3.3.0"
   }
 }
